[package]
name = "wsdatainspector"
version = "0.1.0"
authors = ["Stuart Thompson <stuart@stuartthompson.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "wdi"
path = "src/main.rs"

[dependencies]
sha-1 = "0.8.2"
base64 = "0.12.1"
banner = "0.0.4"
bitformat = "0.0.3"
